--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@sendbird/chat": "^4.12.0",
+    "@sendbird/uikit-react": "^3.13.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.18.1",
@@ -32,8 +34,9 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.3",
     "clsx": "^2.1.0",
-    "date-fns": "^3.4.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.314.0",
+    "mongodb": "^6.5.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
@@ -42,6 +45,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-query": "^3.39.3",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
