--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.9.1",
+    "prisma-dbml-generator": "^0.12.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
